@@ -55,26 +55,27 @@
 """\n
 portal = context.getPortalObject()\n
 \n
-if context.REQUEST.form.has_key("key"):\n
+request = context.REQUEST\n
+\n
+if request.form.has_key("key"):\n
   webpage = context.WebSection_userFollowUpWebPage(reference=context.REQUEST.form.get("key"))\n
   webpage_id = webpage.getId()\n
   editor_name = context.Base_getEditorViewName(webpage.getPortalType())\n
   return context.Base_redirect("/web_page_module/%s/%s" % (webpage_id, editor_name),\n
                               keep_items=dict(editable_mode=1))\n
+\n
 else:\n
+  portal_type_list = request.form.get("portal_type")\n
+  searchable_text = request.form.get("SearchableText")\n
   return context.Base_redirect("unfoldDomain", \n
                                keep_items = dict(domain_url="ung_domain/all_document_list",\n
                                                  form_id="erp5_web_ung_layout",\n
                                                  list_selection_name="ung_document_list_selection",\n
                                                  domain_depth=0,\n
+                                                 SearchableText=searchable_text,\n
+                                                 portal_type=portal_type_list,\n
                                                  reset=1))\n
 </string> </value>
-        </item>
-        <item>
-            <key> <string>_code</string> </key>
-            <value>
-              <none/>
-            </value>
         </item>
         <item>
             <key> <string>_params</string> </key>
@@ -91,59 +92,8 @@ else:\n
             </value>
         </item>
         <item>
-            <key> <string>errors</string> </key>
-            <value>
-              <tuple/>
-            </value>
-        </item>
-        <item>
-            <key> <string>func_code</string> </key>
-            <value>
-              <object>
-                <klass>
-                  <global name="FuncCode" module="Shared.DC.Scripts.Signature"/>
-                </klass>
-                <tuple/>
-                <state>
-                  <dictionary>
-                    <item>
-                        <key> <string>co_argcount</string> </key>
-                        <value> <int>0</int> </value>
-                    </item>
-                    <item>
-                        <key> <string>co_varnames</string> </key>
-                        <value>
-                          <tuple>
-                            <string>_getattr_</string>
-                            <string>context</string>
-                            <string>portal</string>
-                            <string>webpage</string>
-                            <string>webpage_id</string>
-                            <string>editor_name</string>
-                            <string>dict</string>
-                          </tuple>
-                        </value>
-                    </item>
-                  </dictionary>
-                </state>
-              </object>
-            </value>
-        </item>
-        <item>
-            <key> <string>func_defaults</string> </key>
-            <value>
-              <none/>
-            </value>
-        </item>
-        <item>
             <key> <string>id</string> </key>
             <value> <string>WebSection_renderer</string> </value>
-        </item>
-        <item>
-            <key> <string>warnings</string> </key>
-            <value>
-              <tuple/>
-            </value>
         </item>
       </dictionary>
     </pickle>
